--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "next-auth": "latest",
     "nodemailer": "^6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "axios": "^0.26.1",
   },
   "devDependencies": {
     "@types/node": "^17",
